<?xml version="1.0" encoding="utf-8"?>
<resources>

<!--    <string name="app_name">北京赛车</string>-->
   <!-- <string name="app_name">北京赛车PK10</string> 北京-赛车 北京赛车PK10m 传oppo用 小米application id name+m 加mi  ,北京赛车PK10s -->
    <string name="app_name">北京赛车PK10s</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">分享</string>
    <string name="message">消息</string>
    <string name="news">新闻</string>
    <string name="award_lottery">开奖</string>
    <string name="category_lottery">分类</string>
    <string name="send">发送</string>
    <string name="clean_chche">清除缓存</string>
    <string name="user_id">USER ID</string>
    <string name="btn_logon">快速登录</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>



     <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>

    
     <!-- forget_psw -->
    <string name="forget_psw">忘记密码？</string>
    <string name="next">下一步</string>
    <string name="obtain">获取验证码</string>
    <string name="forget_psw1_et_hint">请输入手机号码</string>
    <string name="forget_psw2_et_hint">短信校验码</string>
    <string name="forget_psw3_et1_hint">输入新密码</string>
    <string name="forget_psw3_et2_hint">确认新密码</string>
    <string name="sure">确定</string>
    
    <string name="home">首页</string>
    <string name="back">后退</string>
    <string name="forward">前进</string>
    <string name="refresh">刷新</string>
    <string name="menu">菜单</string>

    <string-array name="welcome_tips">
        <item >主人，小彩机器人在此等候多时了</item>
        <item >主人，近来一切可好</item>
        <item >亲爱的，我想死你了</item>
        <item >欢迎回来，我是小彩机器人。</item>
        <item >我是小彩机器人，很高兴为您服务。</item>
    </string-array>

</resources>
