<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingBottom="55dp">

	<LinearLayout
		android:id="@+id/popup"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
	    android:orientation="vertical"
		android:background="@color/bottom_red"
		>

	        <TextView
	            android:id="@+id/font1"
	            android:layout_width="90dp"
	            android:layout_height="45dp"
	            android:text="@string/share"
				android:gravity="center"
				android:textColor="@color/white"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:background="@color/white_x"/>


	        <TextView
	            android:id="@+id/font2"
				android:layout_width="90dp"
				android:layout_height="45dp"
				android:text="@string/message"
				android:gravity="center"
				android:textColor="@color/white"/>

		<View
			android:layout_width="match_parent"
			android:layout_height="0.5dp"
			android:background="@color/white"/>

	        <TextView
	            android:id="@+id/font3"
				android:layout_width="90dp"
				android:layout_height="45dp"
				android:text="@string/clean_chche"
				android:gravity="center"
				android:textColor="@color/white"/>

	</LinearLayout>

</RelativeLayout>