<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/title_top" />
		<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="方式一："
                android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="用户名："
                android:textSize="16sp" />

            <EditText
                android:id="@+id/find_username"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:orientation="horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 邮  箱 ："
                android:textSize="16sp" />

            <EditText
                android:id="@+id/find_email"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/find_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:background="@color/red"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:text="确认"
        android:textSize="16sp" />

		<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="方式二："
                android:textSize="16sp" />
		
	<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:orientation="vertical" >
        
    <EditText
        android:id="@+id/forgetPsw1ET"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_register"
        android:hint="@string/forget_psw1_et_hint"
        android:inputType="phone"
        android:paddingLeft="10dp" >
    </EditText>

    <EditText
        android:id="@+id/forgetPsw2ET"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_below="@+id/forgetPsw1ET"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_register"
        android:hint="@string/forget_psw2_et_hint"
        android:inputType="number"
        android:paddingLeft="10dp" >
    </EditText>

    <Button
        android:id="@+id/btn_obtain"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_alignBaseline="@+id/forgetPsw2ET"
        android:layout_alignBottom="@+id/forgetPsw2ET"
        android:layout_toRightOf="@+id/forgetPsw2ET"
        android:background="@drawable/resend_btn_selector"
        android:text="@string/obtain" 
        />

</RelativeLayout>

	<Button
	    android:id="@+id/button2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:background="@color/red"
	    android:onClick="btnNext"
	     android:layout_gravity="center_horizontal"
	    android:text="@string/next"
	   	android:textSize="16sp" />
		
</LinearLayout>